--- a/src/main/webapp/resources/assets/css/app.css
+++ b/src/main/webapp/resources/assets/css/app.css
@@ -229,3 +229,29 @@ img, svg {
 .single-form-max-width {
     max-width: 600px;
 }
+@media (max-width: 991.98px) {
+    .header {
+        position: static;
+        width: inherit;
+        height: auto
+    }
+
+    .header .blog-name {
+        width: 100%;
+        position: absolute;
+        left: 0;
+        top: 1.2rem
+    }
+
+    .header .btn-primary {
+        width: 100%
+    }
+
+    .header .navbar {
+        padding: 1rem
+    }
+
+    .main-wrapper {
+        margin-left: 0
+    }
+}
