--- a/src/main/webapp/resources/assets/css/app.css
+++ b/src/main/webapp/resources/assets/css/app.css
@@ -104,7 +104,7 @@ a.no-text-decoration {
     }
 }
 
-.meta {
+.meta, .comment span {
     color: #8f8f8f;
     font-size: 0.8125rem;
 }
@@ -121,7 +121,7 @@ a.no-text-decoration {
     display: none;
 }
 
-.meta span:after {
+.meta span:after, .comment strong:after {
     content: "";
     display: inline-block;
     width: 3px;
@@ -134,13 +134,17 @@ a.no-text-decoration {
     top: -3px;
 }
 
-.meta span.replier{
+strong.replier {
     color: #55595c;
     font-size: 1rem;
 }
 
 img, svg {
     vertical-align: middle;
+}
+
+svg {
+    pointer-events: none;
 }
 
 .blog-list .item .title {
@@ -234,6 +238,7 @@ img, svg {
 .single-form-max-width {
     max-width: 600px;
 }
+
 @media (max-width: 991.98px) {
     .header {
         position: static;
@@ -263,5 +268,19 @@ img, svg {
 
 .blog-comments-section li div.comment {
     border-left: 5px solid #1a1a1a;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     padding-left: 7px;
+}
+
+.comment-list {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.comment-list .comment span {
+    white-space: pre;
+}
+
+.comment-list svg {
+    width: 13px;
+    height: 13px;
 }
